--- a/client/views/partials/admin/customers/customers.html
+++ b/client/views/partials/admin/customers/customers.html
@@ -7,7 +7,7 @@
         <li ui-sref-active="activated"><a href="#" ui-sref="customers.factoryOwners">Factory Owners</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="customers.guest">Guest</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="customers.restOfAll">Rest of All</a></li>
-        <li class="col-xs-3 pull-right">
+        <li class="col-sm-3 col-xs-12 pull-right">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
