--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -55,9 +55,10 @@
                 </uib-accordion-heading>
                 <div class="col-xs-12">
                     <div class="col-xs-12 col-sm-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control custom-form-control" placeholder="Company Name"
+                        <div class="form-group styling-input-list">
+                            <input type="text" class="form-control custom-form-control"
                                    ng-model="accountDetails.companyName"/>
+                            <label class="focus-effect-for-input">Company Name*</label>
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control custom-form-control" placeholder="Address"
