--- a/client/adminCss/adminStyles.css
+++ b/client/adminCss/adminStyles.css
@@ -182,11 +182,16 @@ body {
 .login-user {
     padding: 10px 0 !important;
 }
-
+.main-table{
+    height: 100% !important;
+    margin-top: 75px;
+}
 .left-nav {
-    background-color: #fff;
+    background-color: #000;
     padding: 0 !important;
-    border-right: 1px solid #CCCCCC;
+    height: 100% !important;
+    position: fixed !important;
+    z-index: 999;
 }
 
 .left-menu ul {
@@ -214,17 +219,24 @@ body {
     display: block;
     width: 100%;
     padding: 12px 15px;
-    color: #000;
+    color: #fff;
 }
 
-.left-menu-anchor:hover,
 .left-menu-anchor:focus {
+    text-decoration: none;
+    color: #fff;
+}
+.left-menu-anchor:hover{
     text-decoration: none;
     color: #000;
 }
 
 .right-nav {
     background-color: #fff;
+    height: 100% !important;
+    position: relative !important;
+    left: 16%;
+    padding: 0 10px !important;
 }
 
 .cus-main {
@@ -248,13 +260,21 @@ body {
 }
 
 .active {
-    background-color: #c0c0c0;
-    color: #000;
+    background-color: #fff;
+    color: #000 !important;
+    background-image: url(../images/right_arrow.png);
+    background-repeat: no-repeat;
+    background-position: 80%;
 }
 
 .custom-form-control {
-    width: 65% !important;
-    height: 35px;
+    height: 42px !important;
+    width: 80% !important;
+    margin: 0 auto;
+}
+.order-form-control {
+    height: 42px !important;
+    width: 100% !important;
 }
 
 .newCust {
@@ -425,10 +445,9 @@ footer {
 
 .plus-pos {
     position: absolute;
-    top: 5px;
-    right: 105px;
+    top: 9px;
+    right: 15px;
     cursor: pointer;
-    /* bottom: 17px; */
 }
 
 .plus-pos>i {
@@ -452,7 +471,7 @@ footer {
 .select2 > .select2-choice.ui-select-match {
     /* Because of the inclusion of Bootstrap */
     height: 34px;
-    width: 85% !important;
+    width: 75% !important;
 }
 .ui-select-choices-row:hover{
     background-color: #e83b13 !important;
@@ -478,7 +497,7 @@ footer {
 .table>caption+thead>tr:first-child>td, .table>caption+thead>tr:first-child>th, .table>colgroup+thead>tr:first-child>td, .table>colgroup+thead>tr:first-child>th, .table>thead:first-child>tr:first-child>td, .table>thead:first-child>tr:first-child>th {
     border-top: 0;
     padding: 10px;
-    background: #3e2f2f;
+    background: #c7553a;
     color: #fff;
     font-weight: bold;
 }
@@ -518,4 +537,123 @@ footer {
 .edit_icon, .delete_icon{
     font-size: 16px;
     padding: 5px;
+}
+/*------------------Input Label Styling-----------*/
+
+.styling-input-list {
+    position: relative;
+    z-index: 0;
+}
+.focus-effect-for-input {
+    position: absolute;
+    top: 10px;
+    left: 55px;
+    color: #989898;
+    font-size: 14px;
+    font-weight: lighter;
+    z-index: -99999;
+    width: auto;
+    background-color: #fff;
+    padding: 0 5px;
+}
+.order-effect-for-input {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: #989898;
+    font-size: 14px;
+    font-weight: lighter;
+    z-index: -99999;
+    width: auto;
+    background-color: #fff;
+    padding: 0 5px;
+}
+.custom-form-control, .order-form-control {
+    background-color: transparent !important;
+    z-index: 10 !important;
+}
+
+.custom-form-control:not([disabled]):focus ~ .focus-effect-for-input {
+    /*whsOnd:not([disabled]):focus~.AxOyFc*/
+    transform: scale(.9) translateY(-20px);
+    left: 55px;
+    color: #000;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all 0.5s ease-in-out; /** Firefox **/
+    -o-transition: all 0.5s ease-in-out; /** Opera **/
+    width: auto;
+    background-color: #fff;
+    padding: 0 5px;
+    z-index: 2;
+}
+
+ .order-form-control:not([disabled]):focus ~ .order-effect-for-input {
+    /*whsOnd:not([disabled]):focus~.AxOyFc*/
+    transform: scale(.9) translateY(-20px);
+    left: 0px;
+    color: #000;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all 0.5s ease-in-out; /** Firefox **/
+    -o-transition: all 0.5s ease-in-out; /** Opera **/
+    width: auto;
+    background-color: #fff;
+    padding: 0 5px;
+    z-index: 2;
+}
+
+.ng-not-empty + .focus-effect-for-input {
+    transform: scale(.9) translateY(-20px);
+    left: 55px;
+    top: 8px;
+    color: #000;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all 0.5s ease-in-out; /** Firefox **/
+    -o-transition: all 0.5s ease-in-out; /** Opera **/
+    z-index: 2;
+}
+
+.ng-not-empty + .order-effect-for-input {
+    transform: scale(.9) translateY(-20px);
+    left: 10px;
+    top: 8px;
+    color: #000;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all 0.5s ease-in-out; /** Firefox **/
+    -o-transition: all 0.5s ease-in-out; /** Opera **/
+    z-index: 2;
+}
+
+/*sign-up input css*/
+
+.top_sign .focus-effect-for-input, .top_sign .focus-effect-for-input-trucks {
+    color: #467371;
+}
+.panel-default>.panel-heading {
+    color: #fff !important;
+    background-color: #21345d !important;
+    border-color: #9a1f1f;
+    font-weight: bold !important;
+}
+.panel-title{
+    font-weight: bold;
+}
+.accordion-toggle:hover, .accordion-toggle:focus {
+    text-decoration: none !important;
+    color: #ffffff;
+}
+
+
+/* Responsive Design */
+
+@media only screen and (max-width: 767px) {
+    .left-nav {
+        position: static !important;
+    }
+    .right-nav{
+    left: 15px !important;
+     }
 }
