--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -24,7 +24,7 @@
 <body>
 <div class="main-page" ng-app="easygaadiAdmin" ng-controller="adminNavCtrl" ng-cloak>
     <div class="container-fluid pall-zero">
-        <nav class="navbar custom-navbar">
+        <nav class="navbar custom-navbar navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand logo" href="#"><img src="images/logo-login.png"> </a>
@@ -46,7 +46,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div>
+            <div class="main-table">
                 <div class="col-sm-2 col-xs-12 left-nav" ng-if="isLoggedIn()">
                     <adminleft-menu label="Dashboard"></adminleft-menu>
                     <adminleft-menu label="Customers" ui-sref="customers.customersLead"></adminleft-menu>
