--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -4,7 +4,7 @@
         <li class="pull-right">
             <button class="btn btn-primary" ui-sref="customers.createCustomer">Create New</button>
         </li>
-        <li class="pull-right col-xs-2">
+        <li class="pull-right col-xs-12 col-sm-2">
             <select class="form-control">
                 <option>Select</option>
                 <option>Qualified</option>
@@ -19,34 +19,41 @@
         </li>
     </ul>
     <div class="clearfix"></div>
-    <table class="table table-bordered table-striped table-condensed table-hover mt-20 text-center" ng-table="customerParams">
+    <div class="table-responsive">
+        <table class="table table-bordered table-striped table-condensed table-hover mt-20 text-center"
+               ng-table="customerParams">
 
-        <tbody>
-        <tr ng-repeat="customer in customerLeads">
-            <td>{{$index+1}}</td>
-            <td data-title="'Customer Name'" sortable="'name'" class="clickable-item">{{customer.userName}}</td>
-            <td data-title="'Lead Type'" sortable="'leadType'" class="clickable-item">{{customer.leadType}}</td>
-            <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone[0]}}</td>
-            <td data-title="'Reg Date'" sortable="'date'" class="clickable-item">{{customer.createdAt | date:medium}}</td>
-            <td data-title="'Yes'" sortable="'yes'" class="clickable-item">Yes</td>
-            <td data-title="'ERP'" sortable="'erp'" class="clickable-item">{{customer.erpEnabled}}</td>
-            <td data-title="'GPS'" sortable="'gps'" class="clickable-item">{{customer.gpsEnabled}}</td>
-            <td data-title="'Load'" sortable="'load'" class="clickable-item">{{customer.loadEnabled}}</td>
-            <td class="col-xs-2" data-title="'Lead Status'" >
-                <select class="form-control">
-                    <option ng-repeat="item in leadStatus">{{item}}</option>
-                </select>
-            </td>
-            <td data-title="'Action'" >
-                <a href="#" ui-sref="customers.createCustomer({customerId:customer._id})" class="edit_icon">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-                <a href="#" ng-click="delCustomer(customer._id)" class="delete_icon">
-                    <span class="glyphicon glyphicon-trash"></span>
-                </a>
-            </td>
-        </tr>
+            <tbody>
+            <tr ng-repeat="customer in customerLeads">
+                <td>{{$index+1}}</td>
+                <td data-title="'Customer Name'" sortable="'name'" class="clickable-item">{{customer.userName}}</td>
+                <td data-title="'Lead Type'" sortable="'leadType'" class="clickable-item">{{customer.leadType}}</td>
+                <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">{{customer.contactPhone}}
+                </td>
+                <td data-title="'Reg Date'" sortable="'date'" class="clickable-item">{{customer.createdAt |
+                    date:medium}}
+                </td>
+                <td data-title="'Yes'" sortable="'yes'" class="clickable-item">Yes</td>
+                <td data-title="'ERP'" sortable="'erp'" class="clickable-item">{{customer.erpEnabled}}</td>
+                <td data-title="'GPS'" sortable="'gps'" class="clickable-item">{{customer.gpsEnabled}}</td>
+                <td data-title="'Load'" sortable="'load'" class="clickable-item">{{customer.loadEnabled}}</td>
+                <td class="col-xs-2" data-title="'Lead Status'">
+                    <select class="form-control">
+                        <option ng-repeat="item in leadStatus">{{item}}</option>
+                    </select>
+                </td>
+                <td data-title="'Action'">
+                    <a href="#" ui-sref="customers.createCustomer({customerId:customer._id})" class="edit_icon">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </a>
+                    <a href="#" ng-click="delCustomer(customer._id)" class="delete_icon">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </a>
+                </td>
+            </tr>
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+
+    </div>
 </div>
