--- a/client/views/partials/admin/customers/truckOwners.html
+++ b/client/views/partials/admin/customers/truckOwners.html
@@ -1,6 +1,7 @@
-
+<div ng-controller="transporterCtrl" ng-init="countTruckOwner()">
     <ul class="list-inline title-ul">
-        <li class="pull-left name-head">Truck Owners</li>
+        <li class="pull-left name-head">Truck Owners
+        </li>
         <li class="pull-right col-xs-2">
             <select class="form-control">
                 <option>Select</option>
@@ -14,94 +15,45 @@
         </li>
         <div class="clearfix"></div>
     </ul>
-    <div class="clearfix"></div>
-    <table class="table table-bordered table-responsive mt-20">
-        <thead>
-        <tr>
-            <th>S No</th>
-            <th>ID</th>
-            <th>Customer Name</th>
-            <th>Mobile</th>
-            <th>No of Reg Trucks</th>
-            <th>No of Trucks</th>
-            <th>ERP</th>
-            <th>GPS</th>
-            <th>Load</th>
-            <th>SMS/Email</th>
-            <th>Status</th>
-            <th>Action</th>
+    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="transporterParams">
+        <tr ng-repeat="transporter in currentPageOfTruckOwners" style="text-align: center;">
+            <td data-title="'S.No'">
+                {{$index+1}}
+            </td>
+            <td data-title="'ID'" sortable="'firstName'" class="clickable-item">
+                {{transporter.firstName}}
+            </td>
+            <td data-title="'Customer Name'" sortable="'lastName'" class="clickable-item">
+                {{transporter.lastName}}
+            </td>
+            <td data-title="'Company'" sortable="'contactPhone'" class="clickable-item">
+                {{transporter.contactPhone}}
+            </td>
+            <td data-title="'Mobile'" sortable="'email'" class="clickable-item">
+                {{transporter.email}}
+            </td>
+            <td data-title="'Reg Date'" sortable="'city'" class="clickable-item">
+                {{transporter.city}}
+            </td>
+            <td data-title="'No of Loads'" sortable="'state'" class="clickable-item">
+                {{transporter.state}}
+            </td>
+            <td data-title="'ERP'" sortable="'isActive'" class="clickable-item">
+                {{transporter.isActive?'Enabled':'Disabled'}}
+            </td>
+            <td data-title="'GPS'" sortable="'isActive'" class="clickable-item">
+                {{transporter.isActive?'Enabled':'Disabled'}}
+            </td>
+            <td data-title="'Status'" sortable="'isActive'" class="clickable-item">
+                {{transporter.isActive?'Enabled':'Disabled'}}
+            </td>
+            <td data-title="'Action'" sortable="'contactPhone'" class="clickable-item">
+                <a href="#" ui-sref="admin.addUpdateTruckOwner({transporterId: transporter._id})" class="edit_icon"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a href="#" ng-click="deleteTruckOwner($index)" class="delete_icon"><span class="glyphicon glyphicon-trash  "></span></a>
+            </td>
         </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>1</td>
-            <td>2889</td>
-            <td>Sravan Kumar</td>
-            <td>9618485858</td>
-            <td>1</td>
-            <td>10</td>
-            <td>Yes</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>Enabled</td>
-            <td>Edit/Delete</td>
+        <tr ng-if="!currentPageOfTruckOwners || currentPageOfTruckOwners.length === 0">
+            <td colspan="8">No Truck Owners Records exist.</td>
         </tr>
-        <tr>
-            <td>1</td>
-            <td>2889</td>
-            <td>Sravan Kumar</td>
-            <td>9618485858</td>
-            <td>1</td>
-            <td>10</td>
-            <td>Yes</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>Enabled</td>
-            <td>Edit/Delete</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2889</td>
-            <td>Sravan Kumar</td>
-            <td>9618485858</td>
-            <td>1</td>
-            <td>10</td>
-            <td>Yes</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>Enabled</td>
-            <td>Edit/Delete</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2889</td>
-            <td>Sravan Kumar</td>
-            <td>9618485858</td>
-            <td>1</td>
-            <td>10</td>
-            <td>Yes</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>Enabled</td>
-            <td>Edit/Delete</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>2889</td>
-            <td>Sravan Kumar</td>
-            <td>9618485858</td>
-            <td>1</td>
-            <td>10</td>
-            <td>Yes</td>
-            <td>Yes</td>
-            <td>No</td>
-            <td>Yes</td>
-            <td>Enabled</td>
-            <td>Edit/Delete</td>
-        </tr>
-        </tbody>
     </table>
+</div>
